# aimessage

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
bundle/AiMessage.app/Contents/: Info.plist
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/api/: authentication.md  conversations.md  health.md  messages.md  reactions-typing.md  webhooks.md  websocket.md
docs/book/src/architecture/: events.md  imessage.md  overview.md
docs/book/src/development/: building.md  contributing.md  structure.md
docs/book/src/getting-started/: configuration.md  installation.md  permissions.md  running.md
docs/superpowers/plans/: 2026-03-23-aimessage-server.md  2026-03-23-aimessage-v2-direct-imessage.md
docs/superpowers/specs/: 2026-03-23-aimessage-server-design.md
scripts/: build-app.sh
src/: config.rs  main.rs  tray.rs
src/api/: auth.rs  handlers.rs  mod.rs  ratelimit.rs  routes.rs  types.rs
src/backends/: bluebubbles.rs  mod.rs
src/core_layer/: backend.rs  bb_parse.rs  errors.rs  mod.rs  types.rs  webhook.rs
src/imessage/: applescript.rs  backend.rs  chatdb.rs  mod.rs  private_api.rs
src/storage/: sqlite.rs
